Add Etch-a-Sketch Grid with drawing functionality

--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
     <link rel="stylesheet" href="./style/style.css">
     <script src="./script/app.js" defer></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fustat:wght@200..800&family=Lilita+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">    
+   
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <header>
+        <div id="title"> Johan's Etch-a-Sketch </div>
+    </header>
     
+    <main>
+        <div id="user-utilities">
+            <input type="text">
+        </div>
+        <div class="container"></div>
+    </main>
+ 
+    <footer>
+
+    </footer>
+    </div>
 </body>
 </html>
