--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
     
     <main>
         <div id="user-utilities">
-            <input type="text">
+
+            <div class="user-form">
+                <label for="grid-block-amount"> Grid Size (1-100)</label>
+                <input type="range" id="grid-block-amount" name="grid-block-amount" min="1" max="100">
+                <button id="grid-block-amount-submit"> Submit </button>
+            </div>
+            
         </div>
         <div class="container"></div>
     </main>
